--- a/.github/workflows/profile-summary-cards.yml
+++ b/.github/workflows/profile-summary-cards.yml
@@ -18,7 +18,8 @@ jobs:
       # 第一步，checkout 当前项目
       - uses: actions/checkout@v2
       # 第二步，引入目标 action: vn7n24fzkq/github-profile-summary-cards仓库中的 `release` 分支
-      - uses: vn7n24fzkq/github-profile-summary-cards@release
+      - name: GitHub-Profile-Summary-Cards
+      - uses: vn7n24fzkq/github-profile-summary-cards@v0.7.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
